# autonomous-gazebo-ros

./: .gitignore  README.md  architecture.md  car.urdf  converter.py  frames_2026-06-30_20.37.41.gv  gemini.md  gstreamer_receiver.py  save_frame.py  test_gst.py  test_rknn.py  world.sdf  yolo_conda_list.txt
.agents/: AGENTS.md
.antigravitycli/: ebe16a1d-2775-4fd9-a7da-99f022afd2cd.json
build_tools/: build_cross.sh  build_hybrid.sh
build_tools/cross_compile/: aarch64_toolchain.cmake
build_tools/patches/: orb_slam3_arch.patch
deprecated/: edge_device_slam_plan.md  plan.md  setup_orangepi_foxy.sh  setup_orangepi_minimal.sh  setup_orangepi_safe.sh  test_depth_integrity.py  testackermann.sdf
deprecated/build_tools/cross_compile/: Dockerfile  Dockerfile.hybrid  symlink_fix.py
deprecated/build_tools/patches/: orb_slam3_headless.patch
deprecated/edge_device_slam_node/: package.xml
deprecated/edge_device_slam_node/include/edge_device_slam_node/: yolo_postprocess.h
deprecated/edge_device_slam_node_v2/src/: edge_device_slam_node.cpp
docs/: AUTONOMOUS_TESTING_PLAN.md  EDGE_DEVICE.md  FOXGLOVE_INTEGRATION.md  MVP_RETROSPECTIVE.md  NAV2_RETROSPECTIVE.md  NETWORKING_TROUBLESHOOTING.md  STREAMING_STRATEGY.md  TUTORIAL.md  camera_pipeline_refactor.md  rtsp_streaming(deprecated).md
plans/: driving_model_plan.md  gemini_on_edge_plan.md  hybrid_cross_compilation_plan.md  plan.md  rtabmap_edge_slam_plan.md  semantic_sensor_npu_plan.md
ros2_ws/autonomus_kart/: package.xml  setup.cfg  setup.py
ros2_ws/docs/: edge_device_slam_plan.md
ros2_ws/src/gazebo_oakd_stream_sender/: LICENSE  package.xml  setup.cfg  setup.py
ros2_ws/src/gazebo_oakd_stream_sender/config/: cyclonedds.xml
ros2_ws/src/gazebo_oakd_stream_sender/gazebo_oakd_stream_sender/: combined_streamer.py  depth_image_subscriber.py  left_image_subscriber.py  rgb_image_subscriber.py  right_image_subscriber.py
ros2_ws/src/gazebo_oakd_stream_sender/gazebo_oakd_stream_sender.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ros2_ws/src/gazebo_oakd_stream_sender/launch/: stream_to_remote.launch.py
ros2_ws/src/my_gazebo_package/: CMakeLists.txt  package.xml
ros2_ws/src/my_gazebo_package/config/: ros_gz_bridge.yaml
ros2_ws/src/my_gazebo_package/launch/: gazebo.launch.py
ros2_ws/src/my_gazebo_package/models/: car.urdf.xacro  oakd_camera.urdf.xacro
ros2_ws/src/my_gazebo_package/my_gazebo_package_py/: track_builder.py  track_layouts.py
ros2_ws/src/my_gazebo_package/my_gazebo_package_py/nodes/: driving_model_node.py  random_drive_node.py  track_generator_node.py  validation_node.py
ros2_ws/src/my_gazebo_package/srv/: ChangeTrack.srv
ros2_ws/src/my_gazebo_package/worlds/: world.sdf
ros2_ws/src/rosidl_generator_rs/: CMakeLists.txt  package.xml
ros2_ws/src/sim_camera_encoder/: CMakeLists.txt  package.xml
ros2_ws/src/sim_camera_encoder/src/: sim_camera_encoder_node.cpp
ros2_ws_receiver/: README.md
ros2_ws_receiver/src/ackermann_data_msgs/: CMakeLists.txt  package.xml
ros2_ws_receiver/src/ackermann_data_msgs/msg/: AckermannControl.msg
ros2_ws_receiver/src/cone_detector_npu/: CMakeLists.txt  package.xml
ros2_ws_receiver/src/cone_detector_npu/src/: cone_detector_npu.cpp
ros2_ws_receiver/src/edge_device_slam_node/: CMakeLists.txt  package.xml
ros2_ws_receiver/src/edge_nav2/: package.xml  setup.cfg  setup.py
ros2_ws_receiver/src/edge_nav2/config/: nav2_params.yaml
ros2_ws_receiver/src/edge_nav2/edge_nav2/: nav2_ackermann_bridge.py
ros2_ws_receiver/src/edge_nav2/launch/: nav2_edge.launch.py
ros2_ws_receiver/src/edge_oakd_camera_node/: package.xml  setup.cfg  setup.py
ros2_ws_receiver/src/edge_oakd_camera_node/edge_oakd_camera_node/: unified_receiver_node.py
ros2_ws_receiver/src/rtabmap_bridge/: package.xml  setup.cfg  setup.py
ros2_ws_receiver/src/rtabmap_bridge/config/: cyclonedds.xml  ekf.yaml  quiet_cyclonedds.xml
ros2_ws_receiver/src/rtabmap_bridge/launch/: rtabmap_slam.launch.py
ros2_ws_receiver/src/rtabmap_bridge/rtabmap_bridge/: bridge_node.py  cone_detector_npu.py  cone_landmark_processor.py  ground_truth_broadcaster.py  sensor_covariance_injector.py  unpacker_node.py
ros2_ws_receiver/src/sim_camera_decoder/: CMakeLists.txt  package.xml
ros2_ws_receiver/src/sim_camera_decoder/src/: sim_camera_decoder_node.cpp
scripts/: deploy_to_opi.sh  fix_network.sh  launch_sim.sh  setup_orangepi_foxy.sh  setup_orangepi_foxy_v2.sh  setup_orangepi_receiver.sh  setup_orangepi_safe.sh
scripts/feasibility_tests/: README.md  test_rknn_inference.py  test_ros2_import.py
