<?xml version="1.0"?>
<package format="3">
  <name>my_gazebo_package</name>
  <version>0.0.0</version>
  <description>A minimal ROS2 package to interact with Gazebo.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_cmake</buildtool_depend>
  
  <!-- ONLY the generators we actually want -->
  <build_depend>rosidl_generator_c</build_depend>
  <build_depend>rosidl_generator_cpp</build_depend>
  <build_depend>rosidl_generator_py</build_depend>
  
  <build_depend>ros_gz_sim</build_depend>
  <build_depend>ros_gz_bridge</build_depend>
  <build_depend>ros_gz_interfaces</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>joint_state_publisher</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-gst-1.0</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>ament_cmake_python</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
